--- a/tasks/add-secret-imagepull.yaml
+++ b/tasks/add-secret-imagepull.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-secret-imagepull
   namespace: ops-system
 spec:
-  desc: use task `add-secret-imagepull` to create a secret for image pulling in the specified namespace within a Kubernetes cluster.
+  desc: create a secret for image pulling in the specified namespace within a Kubernetes cluster.
   nodeName: anymaster
   typeRef: cluster
   variables:
