--- a/tasks/get-kubeconfig.yaml
+++ b/tasks/get-kubeconfig.yaml
@@ -4,7 +4,7 @@ metadata:
   name: get-kubeconfig
   namespace: ops-system
 spec:
-  desc: use task `get-kubeconfig` to copy kubeconfig from etc to ~/.kube/config
+  desc: copy kubeconfig from etc to ~/.kube/config
   steps:
     - name: Get Remote Kubeconfig
       remotefile: /etc/kubernetes/admin.conf
