--- a/tasks/add-etchosts.yaml
+++ b/tasks/add-etchosts.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-etchosts
   namespace: ops-system
 spec:
-  desc: use task `add-etchosts` to add hosts to /etc/hosts for specified host
+  desc: add hosts to /etc/hosts for specified host
   variables:
     ip:
       display: ip
