--- a/tasks/add-hpa.yaml
+++ b/tasks/add-hpa.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-hpa
   namespace: ops-system
 spec:
-  desc: use task `add-hpa` to add hpa for deployment in specified namespace within a Kubernetes cluster.
+  desc: add hpa for deployment in specified namespace within a Kubernetes cluster.
   nodeName: anymaster
   typeRef: cluster
   variables:
