--- a/tasks/alert-host.yaml
+++ b/tasks/alert-host.yaml
@@ -4,7 +4,7 @@ metadata:
   name: alert-host
   namespace: ops-system
 spec:
-  desc: use task `alert-host` to check host status
+  desc: check host status
   crontab: "54 * * * *"
   typeRef: cluster
   nodeName: anymaster
