--- a/tasks/alert-npu-cm.yaml
+++ b/tasks/alert-npu-cm.yaml
@@ -4,7 +4,7 @@ metadata:
     name: alert-npu-cm
     namespace: ops-system
 spec:
-    desc: use task `alert-npu-cm` to check npu cm in specified host
+    desc: check npu cm in specified host
     crontab: "*/10 * * * *"
     nodeName: "anymaster"
     typeRef: cluster
