--- a/tasks/clear-opstaskpod.yaml
+++ b/tasks/clear-opstaskpod.yaml
@@ -7,7 +7,7 @@ spec:
   crontab: "56 23 * * *"
   typeRef: cluster
   nodeName: anymaster
-  desc: use task `clear-opstaskpod` to clear ops task pod in specified namespace within a Kubernetes cluster.
+  desc: clear ops task pod in specified namespace within a Kubernetes cluster.
   variables:
     namespace:
       display: namespace
