--- a/tasks/cordon-node.yaml
+++ b/tasks/cordon-node.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cordon-node
   namespace: ops-system
 spec:
-  desc: use task `cordon-node` to cordon node in cluster, variables must to set `node`. You can't use task `cordon-node` unless I specifically state that.
+  desc: cordon node in cluster
   nodeName: anymaster
   variables:
     node:
