--- a/tasks/install-istio.yaml
+++ b/tasks/install-istio.yaml
@@ -4,7 +4,7 @@ metadata:
   name: install-istio
   namespace: ops-system
 spec:
-  desc: use task `install-istio` to install istio in Kubernetes
+  desc: install istio in Kubernetes
   nodeName: anymaster
   typeRef: cluster
   variables:
