--- a/tasks/list-clusters.yaml
+++ b/tasks/list-clusters.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-clusters
   namespace: ops-system
 spec:
-  desc: use task `list-clusters` to list all **clusters** in cluster, variables must to set `namespace`
+  desc: list all cluster objects
   variables:
     namespace:
       display: namespace
