--- a/tasks/list-error-events-bypod.yaml
+++ b/tasks/list-error-events-bypod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-error-events-bypod
   namespace: ops-system
 spec:
-  desc: use task `list-error-events-bypod` to get pod events in cluster, variables must to set `pod`、`namespace`, avaliable to set `topk`
+  desc: get pod events in cluster
   nodeName: anymaster
   typeRef: cluster
   variables:
