--- a/tasks/list-pods-abnormal.yaml
+++ b/tasks/list-pods-abnormal.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-pods-abnormal
   namespace: ops-system
 spec:
-  desc: list **abnormal pods*** in cluster
+  desc: list abnormal pods in cluster
   nodeName: anymaster
   typeRef: cluster
   variables:
