--- a/tasks/list-reqlimit.yaml
+++ b/tasks/list-reqlimit.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-reqlimit
   namespace: ops-system
 spec:
-  desc: use task `list-reqlimit` to list request and limit in cluster, variables must to set `namespace`
+  desc: list request and limit in cluster
   nodeName: anymaster
   typeRef: cluster
   variables:
