--- a/tasks/list-svcs.yaml
+++ b/tasks/list-svcs.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-svcs
   namespace: ops-system
 spec:
-  desc: use task `list-svcs` to list **svc** in cluster, variables must to set `namespace`
+  desc: list svc in cluster
   nodeName: anymaster
   typeRef: cluster
   variables:
