--- a/tasks/set-os-mirror.yaml
+++ b/tasks/set-os-mirror.yaml
@@ -4,7 +4,7 @@ metadata:
   name: set-os-mirror
   namespace: ops-system
 spec:
-  desc: use task `set-os-mirror` to set os mirror friendly to China for specified host
+  desc: set os mirror friendly to China for specified host
   variables:
     proxy: 
       default: https://mirror.ghproxy.com/
