--- a/tasks/velero-backup.yaml
+++ b/tasks/velero-backup.yaml
@@ -4,7 +4,7 @@ metadata:
   name: velero-backup
   namespace: ops-system
 spec:
-  desc: use task `velero-backup` to backup Kubernetes Using Velero
+  desc: backup Kubernetes Using Velero
   nodeName: anymaster
   typeRef: cluster
   variables:
