--- a/tasks/add-secret-imagepull.yaml
+++ b/tasks/add-secret-imagepull.yaml
@@ -10,14 +10,17 @@ spec:
   variables:
     secret_server:
       display: secret_server
+      required: true
     secret_username:
       display: secret_username
+      required: true
     secret_password:
       display: secret_password
+      required: true
     secret_name:
-      default: mysecret
+      required: true
     secret_namespace:
-      default: ops-system
+      required: true
     clear:
       default: "false"
   steps:
