--- a/tasks/alert-host.yaml
+++ b/tasks/alert-host.yaml
@@ -12,7 +12,7 @@ spec:
     cluster: 
       default: default
     notifaction: 
-      default: https://xz.wps.cn/api/v1/webhook/send?key=
+      required: true
   steps:
     - name: get host status
       content: kubectl -n ops-system get hosts | grep -q failed && kubectl -n ops-system get hosts | grep failed || echo "OK"
