--- a/tasks/alert-http-status.yaml
+++ b/tasks/alert-http-status.yaml
@@ -7,13 +7,13 @@ spec:
   desc: check specified url http status, if not expected, send notification
   variables:
     url:
-      default: https://www.chenshaowen.com/
+      required: true
     expect: 
       default: "200"
     message: 
       default: "${url} http status is not ${expect}"
     notifaction:
-      default: https://xz.wps.cn/api/v1/webhook/send?key=
+      required: true
   steps:
     - name: get status
       content: curl -I -m 10 -o /dev/null -s -w %{http_code} ${url}
