--- a/tasks/clear-opstaskpod.yaml
+++ b/tasks/clear-opstaskpod.yaml
@@ -11,6 +11,7 @@ spec:
   variables:
     namespace:
       display: namespace
+      required: true
   steps:
     - name: clear ops task pod
       content: kubectl -n ${namespace} delete  pod -l ops=task
