--- a/tasks/delete-pod-force.yaml
+++ b/tasks/delete-pod-force.yaml
@@ -10,8 +10,10 @@ spec:
   variables:
     podname:
       display: pod name
+      required: true
     namespace:
       display: namespace
+      required: true
   steps:
     - name: delete pod
       content: |
