--- a/tasks/get-pod-error-logs-byname.yaml
+++ b/tasks/get-pod-error-logs-byname.yaml
@@ -10,8 +10,10 @@ spec:
   variables:
     namespace:
       display: namespace
+      required: true
     podname:
       display: podname
+      required: true
     topk:
       default: "50"
   steps:
