--- a/tasks/uncordon-node.yaml
+++ b/tasks/uncordon-node.yaml
@@ -10,6 +10,7 @@ spec:
   variables:
     node:
       desc: node name
+      required: true
   steps:
     - name: uncordon node
       content: kubectl uncordon ${node}
