--- a/tasks/list-pipelines.yaml
+++ b/tasks/list-pipelines.yaml
@@ -8,6 +8,7 @@ spec:
   variables:
     namespace:
       desc: namespace
+      required: true
   nodeName: anymaster
   typeRef: cluster
   steps:
