--- a/tasks/list-reqlimit.yaml
+++ b/tasks/list-reqlimit.yaml
@@ -9,7 +9,7 @@ spec:
   typeRef: cluster
   variables:
     namespace:
-      default: "default"
+      required: true
   steps:
     - name: list cpu request limit
       content: kubectl get pod -n ${namespace} -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,CPU-REQ:.spec.containers[*].resources.requests.cpu,CPU-LIMIT:.spec.containers[*].resources.limits.cpu'
