--- a/tasks/inspect-pod.yaml
+++ b/tasks/inspect-pod.yaml
@@ -10,8 +10,10 @@ spec:
   variables:
     namespace:
       display: namespace
+      required: true
     podname:
       display: pod name
+      required: true
   steps:
     - name: get pod details info
       content: kubectl get pod --all-namespaces | grep ${podname} | awk '{print $1, $2}' | xargs -L1 kubectl describe pod -n
