--- a/tasks/check-node-existed.yaml
+++ b/tasks/check-node-existed.yaml
@@ -10,6 +10,7 @@ spec:
   variables:
     node:
       display: node
+      required: true
   steps:
     - name: Check node existed
       content: |
