--- a/tasks/list-clusters.yaml
+++ b/tasks/list-clusters.yaml
@@ -8,6 +8,7 @@ spec:
   variables:
     namespace:
       display: namespace
+      required: true
   nodeName: anymaster
   typeRef: cluster
   steps:
