--- a/tasks/top-pods-bycpu.yaml
+++ b/tasks/top-pods-bycpu.yaml
@@ -9,7 +9,7 @@ spec:
   typeRef: cluster
   variables:
     namespace:
-      default: default
+      required: true
     topk: 
       default: "10"
   steps:
