--- a/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
@@ -67,29 +67,7 @@ spec:
                   type: object
                 type: array
               variables:
-                additionalProperties:
-                  properties:
-                    default:
-                      type: string
-                    desc:
-                      type: string
-                    display:
-                      type: string
-                    enum:
-                      items:
-                        type: string
-                      type: array
-                    examples:
-                      items:
-                        type: string
-                      type: array
-                    regex:
-                      type: string
-                    required:
-                      type: boolean
-                    value:
-                      type: string
-                  type: object
+                additionalProperties: {}
                 type: object
             required:
             - tasks
