--- a/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
@@ -67,7 +67,29 @@ spec:
                   type: object
                 type: array
               variables:
-                additionalProperties: {}
+                additionalProperties:
+                  properties:
+                    default:
+                      type: string
+                    desc:
+                      type: string
+                    display:
+                      type: string
+                    enums:
+                      items:
+                        type: string
+                      type: array
+                    examples:
+                      items:
+                        type: string
+                      type: array
+                    regex:
+                      type: string
+                    required:
+                      type: boolean
+                    value:
+                      type: string
+                  type: object
                 type: object
             required:
             - tasks
