--- a/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
@@ -45,8 +45,6 @@ spec:
                 type: string
               desc:
                 type: string
-              runHistoryLimit:
-                type: integer
               tasks:
                 items:
                   properties:
@@ -66,6 +64,8 @@ spec:
                   - name
                   type: object
                 type: array
+              ttlSecondsAfterFinished:
+                type: integer
               variables:
                 additionalProperties:
                   properties:
