--- a/charts/ops/crds/crd.chenshaowen.com_tasks.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_tasks.yaml
@@ -67,8 +67,6 @@ spec:
                 type: string
               nodeName:
                 type: string
-              runHistoryLimit:
-                type: integer
               runtimeImage:
                 type: string
               selector:
@@ -94,6 +92,8 @@ spec:
                       type: string
                   type: object
                 type: array
+              ttlSecondsAfterFinished:
+                type: integer
               typeRef:
                 type: string
               variables:
